Modernize DocTester Maven config for Markdown export directories
- Update CLAUDE.md to reflect Markdown documentation output (v2.5.0)
  - Change from HTML to pure Markdown format
  - Update output directory reference from target/site/doctester/ to docs/test/
  - Document new multi-format render pipeline (Markdown, LaTeX, HTML)
  - Add Surefire configuration example for test documentation

- Add Maven properties for configurable DocTester output
  - doctester.output.dir (default: docs/test)
  - doctester.format (default: markdown)
  - Pass properties to Surefire via systemPropertyVariables

- Update .gitignore comments to clarify Markdown documentation output
  - Emphasize that docs/ contains generated test documentation

This modernization aligns configuration with the new Markdown-based
documentation generation introduced in DocTester 2.5.0, making it easy
for users to customize output directories and formats via Maven properties.

https://claude.ai/code/session_01TRK4GrTguba4P1Jqxia4sU